# autoware-scripts

./: README.md  autoware-script.py
package/: package_new.py
package/templates/: CMakeLists.txt  README.md  launch.xml  package.xml  package_name.cpp  package_name.hpp
